Apply YARA rules (#3)
* adding applying rules

* adding applying rules

* small refactoring

* small refactoring

* added tests

* Added documentation

* Added documentation

* Added documentation

* Added documentation

* Added documentation
